--- a/JavaScript/debugging-work/error-stack-trace-sample.html
+++ b/JavaScript/debugging-work/error-stack-trace-sample.html
@@ -1,4 +1,5 @@
-<p>
+<html>
+  <p>
   
   Based on the following error stack trace, fill in the answers to the questions below:
 
@@ -22,3 +23,4 @@ What is the description of the error in this stack trace?
 4 - Answer:  Unexpected token ;
   
 </p>
+</html>
