--- a/JavaScript/debugging-work/error-stack-trace-sample.html
+++ b/JavaScript/debugging-work/error-stack-trace-sample.html
@@ -1,4 +1,5 @@
 <html>
+  <body>
   <p>
   
   Based on the following error stack trace, fill in the answers to the questions below:
@@ -23,4 +24,5 @@ What is the description of the error in this stack trace?
 4 - Answer:  Unexpected token ;
   
 </p>
+  </body>
 </html>
