--- a/JavaScript/find-documentation/notes.html
+++ b/JavaScript/find-documentation/notes.html
@@ -1,4 +1,4 @@
-Finding Documentation
+<h1>Finding Documentation</h1>
 Sometimes once you’ve tracked down a bug, you might still be confused on how to fix it! Whenever you want to know more about how JavaScript works and what it can do, the best place to go is documentation. You can find the JavaScript documentation at the MDN JavaScript web docs.
 
 The MDN JavaScript web docs are a powerful resource, but they can be overwhelming because they cover so much information. We encourage you to explore the docs, but often the fastest way to access a specific part of the docs you’re interested in is to Google it.
