Training - CodeWrite - Logic - C# - Foundational

--- a/C#/what-is-c#.htm
+++ b/C#/what-is-c#.htm
@@ -14,5 +14,7 @@ Assigning a type essentially tells a computer what operations can and cannot be 
 piece of data. This style of coding helps programmers avoid a large class of errors that are common 
 to Ruby and JavaScript.
 
+-- If you’re familiar with Java, you’ll recognize how C# programs are built—by defining objects that 
+interact with each other, which makes code reusable and easy to manage.
 
 
